fix(spacing): add optional flex spacing fix
Allow a flag to use the flex spacing fix of adding a `white-space:
pre-wrap` span in between the last word/icon span and the rest of the
link.

To use: set `fixFlexSpacing` to `true`

--- a/css/linkpurpose.css
+++ b/css/linkpurpose.css
@@ -47,3 +47,7 @@
 .link-purpose-text:empty {
     display: none;
 }
+
+.link-purpose-space {
+  white-space: pre-wrap;
+}
